# GNOIMI

./: CMakeLists.txt  faiss_search_index.cpp  gen_groudth.cpp  generate_initialization_data.cpp  io.h  kmeans.cpp  learn_GNOIMI.cpp  print_fvecs.cpp  search_GNOIMI.cpp  search_GNOIMI_deco.cpp  test_l2_ip.cpp  test_matrix_perf.cpp  train_opq.cpp
tool/: utils.h
